fix collapse button

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,10 @@ body {
     color: #ffffff;
 }
 
+.icon-bar {
+    background-color: #cccccc;
+}
+
 * {
     font-family: Georgia;
     font-weight:bold;
